--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,11 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,10 +46,36 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSAppTransportSecurity</key>
-<dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-</dict>
+    
+    
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+               
+                <string>fb539426040677189</string>
+            </array>
+        </dict>
+    </array>
+
+    <key>FacebookAppID</key>
+
+  
+    <string>539426040677189</string>
+    <key>FacebookDisplayName</key>
+
+  
+    <string>Nara</string>
+
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
